# sha256sum

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: main.rs
