[package]
name = "sha256sum"
version = "0.2.0"
edition = "2021"
description = "Generate checksum of a file with the SHA256 algorithm" 
author = ["Devdutt Shenoi<devdutt@outlook.in>"]
repository = "https://github.com/de-sh/sha256sum"
license-file = "LICENSE"

[dependencies]
sha2 = "0.10.9"
structopt = "0.3.26"
